Fix word wrap

--- a/src/css/ChartView.css
+++ b/src/css/ChartView.css
@@ -5,3 +5,7 @@
 .c3-chart-bar {
     opacity : 0.8 !important;
 }
+
+.name {
+    white-space:pre-wrap;
+}
